tests/local/function-references/let-bad.wast
(assert_invalid
  (module
    (func let)
  )
  "fill me in once wasmparser implements validation")
